* Minor edits , fix deprecations